--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": ""
+    "version": "5.3.0"
   },
   "dependencies": {
     "hexo": "^5.0.2",
@@ -20,7 +20,6 @@
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^3.0.0",
     "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^2.0.0",
-    "hexo-theme-volantis": "*"
+    "hexo-server": "^2.0.0"
   }
 }
